Changed from mascot names to team abbreviations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div class="column">
-                <h3>BULLS</h3>
+                <h3>CHI</h3>
                 <h2 id="homeScore-el">0</h2>
                 <div class="btn-group">
                     <button onclick="home1El()">+1</button>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="column">
-                <h3>KNICKS</h3>
+                <h3>NYK</h3>
                 <h2 id="guestScore-el">0</h2>
                 <div class="btn-group">
                     <button onclick="guest1El()">+1</button>
